# FYP-Code

AMR/lifty_nodes/: CMakeLists.txt  package.xml
AMR/lifty_nodes/include/: Motor.hpp  hardware_interface_node.hpp  motor_controller_node.hpp
AMR/lifty_nodes/launch/: lifty_nodes.launch.py
AMR/lifty_nodes/scripts/: lifty_services_node.py
AMR/lifty_nodes/src/: Motor.cpp  hardware_interface_node.cpp  motor_controller_node.cpp
MAIN COMPUTER/gazebo_navstack/: package.xml
MAIN COMPUTER/gazebo_navstack/config/: nav2_params.yaml
MAIN COMPUTER/gazebo_navstack/description/: lifty.urdf.xacro
MAIN COMPUTER/gazebo_navstack/launch/: lifty_navigation.launch.py  rsp.launch.py  simulator_navstack.launch.py
MAIN COMPUTER/gazebo_navstack/maps/: robotics_slam_map.pgm  robotics_slam_map.yaml
MAIN COMPUTER/gazebo_navstack/rviz2/: gazebo_navstack.rviz
PIC16-FIRMWARE/firmware/: pins.c  pins.h  system_types.h
firmware/: clock.c  config_bits.c  config_bits.h  interrupt.c  interrupt.h  main.c  system.c  system.h
fyp_interfaces/: CMakeLists.txt  package.xml
fyp_interfaces/srv/: Buzzer.srv  Oled.srv
gazebo_navstack/: CMakeLists.txt
gazebo_navstack/config/: ekf.yaml
gazebo_navstack/description/: lidar.xacro  lifty_core.xacro
gazebo_navstack/include/: dualshock_node.hpp  motors_twist_odom_node.hpp
gazebo_navstack/launch/: map_builder.launch.py
gazebo_navstack/maps/: robotics_lab_map.yaml
gazebo_navstack/params/: gazebo_navstack_params.yaml
gazebo_navstack/scripts/: adjusted_scan_pub.py  odom_data_collect.py  scan_data_collect.py
gazebo_navstack/src/: dualshock_node.cpp  motors_twist_odom_node.cpp
